# port-a-whip

./: .gitignore  CLAUDE.md  DOGFOOD-PENDING.md  LICENSE  NEXT-SESSION.md  README.md  port-a-whip-spec.md  pyproject.toml
.github/workflows/: ci.yml
.paw/memory/: project.jsonl
bench/: RUN-PROMPTS.md  _count_tokens.py  _dataquery_ab.py  _docextract_probe.py  _eval_recall.py  _fetch_def_count.py  _recall_goldset.jsonl  codegraph-workload.md  rtk-ab-workload.md  web-research-workload.md
bench/guides/: 00-INDEX.md  01-webresearch-A-native.md  02-webresearch-B-fetch.md  03-webresearch-C-scrapling.md  04-codegraph-off.md  05-codegraph-on.md  06-semble.md  07-compressor-off.md  08-rtk-on.md  09-headroom-on.md  10-installs.md
docs/: L3-DESIGN.md  L3-ROUTER-CONCERNS.md
integration/: README.md  embed.py  router_log.py  skill-graph.json  skill-router.py
portaw/: __init__.py  __main__.py  bench.py  config.py  main.py
portaw/adapters/: __init__.py  memory_hooks.py  router.py
portaw/kernel/: __init__.py  embed.py  ranking.py  registry.py
portaw/memory/: __init__.py  anchors.py  capture.py  confidence.py  consolidate.py  context.py  detect.py  gate.py  harvest.py  health.py  hookwire.py  inject.py  observations.py  outcomes.py  retrieval.py  schema.py  seed.py  sessionlog.py  similarity.py  store.py  sync.py
portaw/sets/: __init__.py  gain.py  healthcheck.py  install.py  loader.py  patcher.py  runner.py  state.py  usage.py
registry/: candidate-backlog.md  deep-vet.md  sets.json
tests/: conftest.py  test_bench.py  test_cli_entrypoints.py  test_cli_memory_curation.py  test_embed_unify.py  test_gain.py  test_healthcheck.py  test_install.py  test_kernel_embed.py  test_memory_capture.py  test_memory_capture_hook.py  test_memory_consolidate.py  test_memory_context.py  test_memory_detect.py  test_memory_hardening.py  test_memory_harvest.py  test_memory_health.py  test_memory_hookwire.py  test_memory_inject.py  test_memory_livehooks.py  test_memory_observations.py  test_memory_retrieval.py  test_memory_router_wire.py  test_memory_schema.py  test_memory_seed.py  test_memory_sessionlog.py  test_memory_similarity.py  test_memory_store.py  test_memory_sync.py  test_patcher.py  test_ranking.py  test_router.py  test_router_demote.py  test_router_outcomes.py  test_runner.py  test_skill_router_parity.py  test_usage.py
